syntax = "proto3";

package user;

option go_package = "./domain/user/pb";

message User {
    int64 id = 1;
    string username = 2;
    string email = 3;
    string phone_number = 4;
    string password = 5;
    bool is_active = 6;
}

message UserList {
    repeated User List = 1;
}

message GetUserListRequest {}

service UserService {
    rpc getUsers(GetUserListRequest) returns (UserList) {}
}